# SystemDesign_MCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run_api.sh  run_streamlit.sh  run_web.sh
system_design_mcp/: __init__.py
system_design_mcp/agents/: __init__.py  api_agent.py  architecture_agent.py  base.py  diagram_agent.py  formatter_agent.py  infra_agent.py  requirement_agent.py  workflow_agent.py
system_design_mcp/api/: __init__.py  main.py
system_design_mcp/core/: __init__.py  config.py  mcp_controller.py
system_design_mcp/frontend/: __init__.py  app.py
system_design_mcp/models/: __init__.py  schemas.py
system_design_mcp/utils/: __init__.py  llm_client.py  load_estimation.py  logger.py  mermaid_renderer.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/api/: client.ts
web/src/components/: MermaidDiagram.tsx  PromptInput.tsx  ResultView.tsx  Section.tsx
